    contains 0xff.

2.  Changes to Readline

a.  Changed message when an incremental search fails to include "failed" in
    the prompt and display the entire search string instead of just the last
    matching portion.

b.  Fixed a bug that caused an arrow key typed to an incremental search prompt
    to process the key sequence incorrectly.

3.  New Features in Bash

a.  The help builtin now attempts substring matching (as it did through
    bash-4.2) if exact string matching fails.

b.  The fc builtin now interprets -0 as the current command line.

c.  Completing directory names containing shell variables now adds a trailing
    slash if the expanded result is a directory.

4.  New Features in Readline

a.  rl_change_environment: new application-settable variable that controls
    whether or not Readline modifies the environment (currently readline
    modifies only LINES and COLUMNS).

------------------------------------------------------------------------------
This document details the changes between this version, bash-4.3-beta, and the
previous version, bash-4.3-alpha.

1.  Changes to Bash

a.  Fixed a bug in the prompt directory name "trimming" code that caused
    memory corruption and garbled the results.

b.  Fixed a bug that caused single quotes that resulted from $'...' quoting
    in the replacement portion of a double-quoted ${word/pat/rep} expansion
    to be treated as quote characters.

c.  Fixed a bug that caused assignment statements preceding a command word to
    result in assignment statements following a declaration command to not be
    expanded like assignment statements.

d.  Fixed a bug with variable search order in the presence of local variables
    with the same name as variables in the temporary environment supplied to
    a shell function.

e.  Fixed a bug that caused constructs like 1<(2) to be interpreted as process
    substitutions even in an arithmetic context.
