@@ -5276,3 +5276,11 @@ readline.h
 				   ----
 configure.ac
 	- relstatus: bumped version to bash-4.3-beta2
+
+				   9/24
+				   ----
+
+lib/readline/readline.c
+	- bind_arrow_keys_internal: added more key bindings for the numeric key
+	  pad arrow keys on mingw32.  Patch from Pierre Muller
+	  <pierre.muller@ics-cnrs.unistra.fr>
