@@ -33,6 +33,8 @@ a.  Changed message when an incremental search fails to include "failed" in
 b.  Fixed a bug that caused an arrow key typed to an incremental search prompt
     to process the key sequence incorrectly.
 
+c.  Additional key bindings for arrow keys on MinGW.
+
 3.  New Features in Bash
 
 a.  The help builtin now attempts substring matching (as it did through
